--- a/_publications/c_2.md
+++ b/_publications/c_2.md
@@ -1,12 +1,13 @@
 ---
-title: A Multi-scale Learning Approach for Landmark Recognition Using Mobile Devices
+title: Support-free Frame Structures
 collection: publications
 permalink: /publication/conference/2
-authors: <b>T. Chen</b>, Z. Li, K.-H. Yap, K. Wu, and L.-P. Chau
-date: 2009-01-01
-venue: International Conference on Information, Communications and Signal Processing (ICICS)
+authors: Weiming Wang, <b>Sicheng Qian</b>, Liping Lin, Baojun Li, Baocai Yin, Ligang Liu, Xiuping Liu.
+date: 2017-06-01
+venue: Computer & Graphics (Proc. SMI 2017), 2017 66: 154-161.
 pubtype: 'conference'
-pdf: https://ieeexplore.ieee.org/document/5397713
+pdf: http://staff.ustc.edu.cn/~lgliu/Publications/Publications/2017-C&G-SMI2017-SupportFree.pdf
+
 ---
 
 <!-- paperurl: 'http://academicpages.github.io/files/paper1.pdf'
