--- a/_publications/c_2.md
+++ b/_publications/c_2.md
@@ -4,7 +4,7 @@ collection: publications
 permalink: /publication/conference/2
 authors: Weiming Wang, <b>Sicheng Qian</b>, Liping Lin, Baojun Li, Baocai Yin, Ligang Liu, Xiuping Liu.
 date: 2017-06-01
-venue: Computer & Graphics (Proc. SMI 2017), 2017 66: 154-161.
+venue: Computer & Graphics, 2017 66: 154-161. Proc. SMI 2017
 pubtype: 'conference'
 pdf: http://staff.ustc.edu.cn/~lgliu/Publications/Publications/2017-C&G-SMI2017-SupportFree.pdf
 
