--- a/_publications/j_43.md
+++ b/_publications/j_43.md
@@ -1,10 +1,10 @@
 ---
-title: ConvFormer:Marrying and Evolving Nested U-Net and Scale-Aware Transformer for Hyperspectral Image Classifications
+title: xxxxx
 collection: publications
 permalink: /publication/conference/43
-authors: Zhan Lin, Peng Ye, Jiayuan Fan, <b>Tao Chen</b>
-date: 2024-04-07
-venue: IEEE Transactions on Geoscience and Remote Sensing (T-GRS)
+authors: xxx, xxx, xxx
+date: 2024-05-01
+venue: IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI)
 pubtype: 'journal'
 # pdf: https://arxiv.org/abs/2309.02999.pdf
 # code: https://github.com/ch3cook-fdu/Vote2Cap-DETR
