--- a/_publications/j_43.md
+++ b/_publications/j_43.md
@@ -1,15 +1,14 @@
 ---
-title: xxxxx
+title: "Paper Title Number 2"
 collection: publications
-permalink: /publication/conference/43
-authors: xxx, xxx, xxx
-date: 2024-05-01
-venue: IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI)
-pubtype: 'journal'
-# pdf: https://arxiv.org/abs/2309.02999.pdf
-# code: https://github.com/ch3cook-fdu/Vote2Cap-DETR
+category: manuscripts
+permalink: /publication/2010-10-01-paper-title-number-2
+excerpt: 'This paper is about the number 2. The number 3 is left for future work.'
+date: 2010-10-01
+venue: 'Journal 1'
+slidesurl: 'http://academicpages.github.io/files/slides2.pdf'
+paperurl: 'http://academicpages.github.io/files/paper2.pdf'
+citation: 'Your Name, You. (2010). &quot;Paper Title Number 2.&quot; <i>Journal 1</i>. 1(2).'
 ---
 
-<!-- paperurl: 'http://academicpages.github.io/files/paper1.pdf'
-citation: 'Your Name, You. (2009). &quot;Paper Title Number 1.&quot; <i>Journal 1</i>. 1(1).' -->
-<!-- [Download paper here](http://academicpages.github.io/files/paper1.pdf) -->
+The contents above will be part of a list of publications, if the user clicks the link for the publication than the contents of section will be rendered as a full page, allowing you to provide more information about the paper for the reader. When publications are displayed as a single page, the contents of the above "citation" field will automatically be included below this section in a smaller font.
