--- a/_publications/j_1.md
+++ b/_publications/j_1.md
@@ -5,7 +5,7 @@ category: manuscripts
 permalink: /publication/2009-10-01-paper-title-number-1
 excerpt: 'This paper is about the number 1. The number 2 is left for future work.'
 date: 2024-06-01
-venue: 'Journal 1'
+venue: 'IEEE Transactions on Pattern Analysis and Machine Intelligence'
 slidesurl: 'http://aqsc.github.io/files/slides1.pdf'
 paperurl: 'http://aqsc.github.io/files/paper1.pdf'
 citation: 'Your Name, You. (2009). &quot;Paper Title Number 1.&quot; <i>IEEE Transactions on Pattern Analysis and Machine Intelligence</i>. 1(1).'
