--- a/_publications/j_1.md
+++ b/_publications/j_1.md
@@ -1,14 +1,14 @@
 ---
-title: "Paper Title Number 1"
+title: intelligence hollowing and structural enhancement
 collection: publications
-category: manuscripts
-permalink: /publication/2009-10-01-paper-title-number-1
-excerpt: 'This paper is about the number 1. The number 2 is left for future work.'
-date: 2024-06-01
-venue: 'IEEE Transactions on Pattern Analysis and Machine Intelligence'
-slidesurl: 'http://aqsc.github.io/files/slides1.pdf'
-paperurl: 'http://aqsc.github.io/files/paper1.pdf'
-citation: 'Your Name, You. (2009). &quot;Paper Title Number 1.&quot; <i>IEEE Transactions on Pattern Analysis and Machine Intelligence</i>. 1(1).'
+permalink: /publication/conference/2
+authors: <b>Sicheng Qian</b>, xxx, xxx, xxx
+date: 2024-05-16
+venue: The Visual Computer
+pubtype: 'conference'
+pdf: https://doi.org/10.1007/s00371-017-1386-5
 ---
 
-The contents above will be part of a list of publications, if the user clicks the link for the publication than the contents of section will be rendered as a full page, allowing you to provide more information about the paper for the reader. When publications are displayed as a single page, the contents of the above "citation" field will automatically be included below this section in a smaller font.
+<!-- paperurl: 'http://academicpages.github.io/files/paper1.pdf'
+citation: 'Your Name, You. (2009). &quot;Paper Title Number 1.&quot; <i>Journal 1</i>. 1(1).' -->
+<!-- [Download paper here](http://academicpages.github.io/files/paper1.pdf) -->
